# rkb

./: .gitignore  COMPONENTS.md  README.md  backfill_chunk_counts.py  backfill_chunks_db.py  docker-compose.yml  migrate_chroma_pdf_names.py  migrate_nougat_extractions.py  pyproject.toml  test_arxiv.py  test_metadata_methods.py
docs/: CLI_TUTORIAL.md  DATA_MIGRATION.md  analysis_title_integration.md  mcp_server.md  projects.md  remove-command.md  search-api-reference.md  search-for-agents.md  search-user-guide.md
docs/collection-plan/: CORE_LIBRARY.md  DATA_MODEL.md  HOME_INGEST.md  IMPLEMENTATION_PHASES.md  OVERVIEW.md  RECTIFY.md  WORK_TRIAGE.md  ZOTERO_INTEGRATION.md
docs/notes/: COMMANDS.md  DATA_CONTRACTS.md  HASH_POLICY.md  MIGRATION_PLAN.md  OPERATIONS_RUNBOOK.md  checkpoint_tests.md  cloud_extraction_plan.md  data_architecture.md  document_search.md  duplicate_filenames.md  how_to_rank.md  metadata_methods.md  metadata_plan.md  mission.md  nugget_learned.md  plan.md  refactor_nugget_to_rkb.md  requirements.md  robustness.md  search_plan.md  system_architecture.md  system_level_test_plan.md
docs/skills/kbase-research/: SKILL.md
rkb/: __init__.py  api.py  mcp_server.py
rkb/cli/: __init__.py  build_metadata_db.py  inspect_metadata.py  main.py
rkb/cli/commands/: __init__.py  documents_cmd.py  enrich_cmd.py  experiment_cmd.py  extract_cmd.py  find_cmd.py  import_cmd.py  index_cmd.py  ingest_cmd.py  pipeline_cmd.py  project_cmd.py  recent_cmd.py  rectify_cmd.py  remove_cmd.py  search_cmd.py  status_cmd.py  topics_cmd.py  translate_cmd.py  triage_cmd.py  zotero_push_cmd.py
rkb/collection/: __init__.py  bibtex.py  canonical_store.py  catalog.py  config.py  display_name.py  hashing.py  ingest.py  rectify.py  runtime.py  scanner.py  zotero_push.py  zotero_sync.py
rkb/core/: __init__.py  checkpoint_manager.py  chunk_store.py  document_registry.py  identity.py  interfaces.py  models.py  paths.py  text_processing.py
rkb/embedders/: __init__.py  base.py  chroma_embedder.py  ollama_embedder.py  specter2_embedder.py
rkb/extractors/: __init__.py  base.py  nougat_extractor.py
rkb/extractors/metadata/: __init__.py  arxiv_extractor.py  base.py  doi_crossref.py  filename_extractor.py  first_page_parser.py  gemini_flash.py  gemma2_extractor.py  grobid_extractor.py  models.py  pdf_metadata.py  semantic_scholar.py  xmp.py  zotero_translation.py
rkb/pipelines/: __init__.py  complete_pipeline.py  ingestion_pipeline.py
rkb/services/: __init__.py  bm25_index.py  enrich.py  experiment_service.py  metadata_resolver.py  project_service.py  search_service.py  strict_gemini.py  translate.py
rkb/triage/: __init__.py  app.py  decisions.py  pdf_renderer.py  staging.py
rkb/triage/static/: style.css  triage.js
rkb/triage/templates/: history.html  layout.html  queue.html  review.html
tests/: __init__.py  conftest.py
tests/e2e/: test_complete_workflow.py
tests/integration/: test_zotero_workflow.py
tests/integration/test_pipelines/: __init__.py  test_checkpoint_resume.py  test_complete_pipeline.py  test_ingestion_pipeline.py
tests/system/: README.md  __init__.py  conftest.py  test_cli_errors.py  test_cli_extended.py  test_cli_integration.py  test_cli_real_data.py  test_cli_state.py  test_diagnostics.py
tests/unit/: conftest.py  test_api.py  test_chroma_metadata.py
tests/unit/test_collection/: __init__.py  test_bibtex.py  test_canonical_store.py  test_canonical_store_rename.py  test_catalog.py  test_catalog_metadata.py  test_config.py  test_display_name.py  test_hashing.py  test_import_cmd.py  test_ingest.py  test_ingest_cmd.py  test_recent_cmd.py  test_rectify.py  test_rectify_cmd.py  test_scanner.py  test_status_cmd.py  test_zotero_push.py  test_zotero_push_cmd.py  test_zotero_sync.py
tests/unit/test_core/: test_checkpoint_manager.py  test_chunk_store.py  test_document_registry.py  test_identity.py  test_models.py  test_section_chunking.py  test_text_processing.py
tests/unit/test_embedders/: __init__.py  test_base.py  test_chroma_embedder.py  test_ollama_embedder.py  test_specter2_embedder.py
tests/unit/test_extractors/: __init__.py  test_base.py  test_nougat_extractor.py  test_nougat_extractor_identity.py
tests/unit/test_extractors/test_metadata/: test_arxiv_extractor.py  test_doi_crossref.py  test_filename_extractor.py  test_gemini_flash.py  test_models.py  test_semantic_scholar.py  test_xmp.py  test_zotero_translation.py
tests/unit/test_pipelines/: test_complete_pipeline_recursive.py  test_ingestion_pipeline_deduplication.py
tests/unit/test_services/: __init__.py  test_bm25_index.py  test_enrich.py  test_experiment_service.py  test_hybrid_search.py  test_metadata_resolver.py  test_project_service.py  test_project_service_recursive.py  test_search_service.py  test_search_service_document.py  test_search_service_integration.py  test_search_service_ranking.py
tests/unit/test_triage/: __init__.py  test_app.py  test_decisions.py  test_staging.py  test_triage_cmd.py
